// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders label with content 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 33%;
  min-width: 250px;
}

.c2 {
  font-family: Pt Sans;
  color: #2e2e2e;
}

.c3 {
  font-family: Pt Sans;
  margin-top: 5px;
  font-size: 12px;
  color: #aaa;
}

.c4 {
  padding-left: 40px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 40px 0;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    />
    <div
      className="c3"
    />
  </div>
  <div
    className="c4"
  >
    Label content
  </div>
</div>
`;

exports[`renders label with name and description 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 33%;
  min-width: 250px;
}

.c1 {
  font-family: Pt Sans;
  color: #2e2e2e;
}

.c2 {
  font-family: Pt Sans;
  margin-top: 5px;
  font-size: 12px;
  color: #aaa;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    Label name
  </div>
  <div
    className="c2"
  >
    Label description
  </div>
</div>
`;

exports[`renders label without props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 33%;
  min-width: 250px;
}

.c1 {
  font-family: Pt Sans;
  color: #2e2e2e;
}

.c2 {
  font-family: Pt Sans;
  margin-top: 5px;
  font-size: 12px;
  color: #aaa;
}

<div
  className="c0"
>
  <div
    className="c1"
  />
  <div
    className="c2"
  />
</div>
`;
